--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,10 +7,12 @@ server_list = certified, validated, community_galaxy
 [galaxy_server.certified]
 url=https://console.redhat.com/api/automation-hub/content/published/
 auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
+token =
 
 [galaxy_server.validated]
 url=https://console.redhat.com/api/automation-hub/content/validated/
 auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
+token =
 
 [galaxy_server.community_galaxy]
 url=https://galaxy.ansible.com/
